Saved by TiddlyWiki

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -619,6 +619,8 @@ Error message and password prompt
 
 <li>$:/state/sq/streams/current-edit-tiddler-812925284</li>
 
+<li>$:/state/sq/streams/current-edit-tiddler-940958852</li>
+
 <li>$:/state/sq/streams/visibility/March 3rd, 2021 (Wednesday)/20210304043024922--1352630874</li>
 
 <li>$:/state/sq/streams/visibility/March 3rd, 2021 (Wednesday)/20210304043641979--2032969581</li>
@@ -1583,6 +1585,10 @@ Error message and password prompt
 
 <li>semilattice</li>
 
+<li>semilattice/20210309023551219</li>
+
+<li>semilattice/20210309023553021</li>
+
 <li>systems</li>
 
 <li>t-scores</li>
@@ -1696,8 +1702,6 @@ Error message and password prompt
 <li>Welcome to my online space/20210308234153344</li>
 
 <li>Welcome to my online space/20210308234228650</li>
-
-<li>Welcome to my online space/20210308234357974</li>
 
 <li>Welcome to my online space/20210309023329781</li>
 
@@ -1877,8 +1881,8 @@ Error message and password prompt
 <div bag="default" created="20170615081040584" modified="20201202080625796" revision="0" title="$:/config/_sq/Stories/story2" type="text/vnd.tiddlywiki">
 <pre>yes</pre>
 </div>
-<div bag="default" created="20201022165903898" modified="20210306000717797" revision="0" title="$:/config/AutoSave" type="text/vnd.tiddlywiki">
-<pre>no</pre>
+<div bag="default" created="20201022165903898" modified="20210309023522529" revision="0" title="$:/config/AutoSave" type="text/vnd.tiddlywiki">
+<pre>yes</pre>
 </div>
 <div bag="default" created="20201231183449686" modified="20210212140649737" revision="8" tags="rr-TW5 rr-UI-mod" title="$:/config/DefaultColourMappings/menubar-background" type="text/vnd.tiddlywiki">
 <pre>transparent</pre>
@@ -1922,11 +1926,11 @@ Error message and password prompt
 <div created="20201201192342772" modified="20201201192342772" title="$:/config/PageControlButtons/Visibility/$:/rr/PageControls/Show-Hide-References">
 <pre>hide</pre>
 </div>
-<div created="20210212142758394" modified="20210308234543680" title="$:/config/plugins/menubar/MenuItems/Visibility/$:/plugins/tiddlywiki/menubar/items/contents">
-<pre>hide</pre>
+<div created="20210212142758394" modified="20210309023548437" title="$:/config/plugins/menubar/MenuItems/Visibility/$:/plugins/tiddlywiki/menubar/items/contents">
+<pre>show</pre>
 </div>
-<div created="20210212142758394" modified="20210308234543680" title="$:/config/plugins/menubar/MenuItems/Visibility/$:/plugins/tiddlywiki/menubar/items/hamburger">
-<pre>hide</pre>
+<div created="20210212142758394" modified="20210309023548438" title="$:/config/plugins/menubar/MenuItems/Visibility/$:/plugins/tiddlywiki/menubar/items/hamburger">
+<pre>show</pre>
 </div>
 <div created="20210212142842192" modified="20210212195912023" title="$:/config/plugins/menubar/MenuItems/Visibility/$:/plugins/tiddlywiki/menubar/items/pagecontrols">
 <pre>hide</pre>
@@ -12044,7 +12048,7 @@ $:/config/EditToolbarButtons/Visibility/$(listItem)$
 &lt;$macrocall $name=&quot;tabs&quot; tabsList=&quot;[all[shadows+tiddlers]tag[$:/tags/MoreSideBar]!has[draft.of]]&quot; default={{$:/config/DefaultMoreSidebarTab}} state=&quot;$:/state/tab/moresidebar&quot; class=&quot;tc-vertical tc-sidebar-tabs-more&quot; /&gt;
 &lt;/div&gt;</pre>
 </div>
-<div bag="default" caption="RECENTLY ACCESSED" created="20201227154039983" modified="20210308234543682" revision="57" rr-mod="Added caption field: RECENTLY ACCESSED" tags="$:/tags/SideBar rr-TW5 rr-UX-mod" title="$:/core/ui/SideBar/Open" type="text/vnd.tiddlywiki">
+<div bag="default" caption="RECENTLY ACCESSED" created="20201227154039983" modified="20210309023548439" revision="57" rr-mod="Added caption field: RECENTLY ACCESSED" tags="$:/rr/menu rr-TW5 rr-UX-mod" title="$:/core/ui/SideBar/Open" type="text/vnd.tiddlywiki">
 <pre>\whitespace trim
 \define lingo-base() $:/language/CloseAll/
 
@@ -12310,7 +12314,7 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 <div created="20210213124753025" modified="20210308234637913" title="$:/DefaultTiddlers">
 <pre>[[Welcome to my online space]]</pre>
 </div>
-<div bag="default" created="20210210181701060" creator="akhater" list-before="$:/core/ui/SideBar/Open" modified="20210308234543676" modifier="akhater" revision="118" tags="" title="$:/drift/side-by-side" type="text/vnd.tiddlywiki">
+<div bag="default" created="20210210181701060" creator="akhater" list-before="$:/core/ui/SideBar/Open" modified="20210309023548436" modifier="akhater" revision="118" tags="$:/tags/SideBar" title="$:/drift/side-by-side" type="text/vnd.tiddlywiki">
 <pre>\define drop-actions()
 &lt;$action-listops $tiddler=&quot;$:/rr/pinned&quot; $subfilter=&quot;+[insertbefore:currentTiddler&lt;actionTiddler&gt;]&quot;/&gt;
 &lt;$fieldmangler tiddler=&lt;&lt;actionTiddler&gt;&gt;&gt;
@@ -16415,8 +16419,8 @@ Copy stream to clipboard as `&lt;ul&gt;&lt;li&gt;` list
 &lt;p align=right&gt;&lt;small&gt;(//Transclusion of [[$X$]] as list//)&lt;/small&gt;&lt;/p&gt;
 \end</pre>
 </div>
-<div bag="default" created="20210210175237537" modified="20210308234543675" revision="43" tags="rr-TW5 rr-UX" title="$:/rr/pinned" type="text/vnd.tiddlywiki">
-<pre>inactive</pre>
+<div bag="default" created="20210210175237537" modified="20210309023548436" revision="43" tags="rr-TW5 rr-UX" title="$:/rr/pinned" type="text/vnd.tiddlywiki">
+<pre>active</pre>
 </div>
 <div bag="default" caption="{{$:/core/images/close-button}} {{$:/language/Buttons/Close/Caption}}" created="20210103082124883" creator="akhater" description="{{$:/language/Buttons/Close/Hint}}" modified="20210211165206078" modifier="akhater" revision="19" tags="rr-UX rr-TW5" title="$:/rr/side-by-side/Buttons/close" type="text/vnd.tiddlywiki">
 <pre>&lt;$button tooltip={{$:/config/shortcuts/revealPinnedSideBar}} aria-label=&quot;Hide the Pinned SideBar and Reveal the Normal SideBar&quot; class=&lt;&lt;tv-config-toolbar-class&gt;&gt;&gt;
@@ -16541,14 +16545,14 @@ $:/state/folded/$(currentTiddler)$
 &lt;/div&gt;
 &lt;/$vars&gt;</pre>
 </div>
-<div bag="default" caption="RR-TW5" created="20201022113249513" list-before="$:/core/ui/SideBar/Open" modified="20210308234543681" revision="57" tags="$:/tags/SideBar rr-TW5 rr-UX" title="$:/rr/SideBar/Core" type="text/vnd.tiddlywiki">
+<div bag="default" caption="RR-TW5" created="20201022113249513" list-before="$:/core/ui/SideBar/Open" modified="20210309023548438" revision="57" tags="$:/rr/menu rr-TW5 rr-UX" title="$:/rr/SideBar/Core" type="text/vnd.tiddlywiki">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
 
 &lt;&lt;toc 'rr-core-page'&gt;&gt;
 
 &lt;/div&gt;</pre>
 </div>
-<div bag="default" caption="SHORTCUTS" created="20201103094201681" list-after="$:/rr/SideBar/Core" modified="20210308234543682" revision="57" stream-list="" stream-type="default" tags="$:/tags/SideBar rr-TW5 rr-UX" title="$:/rr/SideBar/Shortcuts" type="text/vnd.tiddlywiki">
+<div bag="default" caption="SHORTCUTS" created="20201103094201681" list-after="$:/rr/SideBar/Core" modified="20210309023548439" revision="57" stream-list="" stream-type="default" tags="$:/rr/menu rr-TW5 rr-UX" title="$:/rr/SideBar/Shortcuts" type="text/vnd.tiddlywiki">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
 
 &lt;&lt;toc &quot;rr-shortcuts&quot; &quot;!tag[nolist]sort[created]&quot;&gt;&gt;
@@ -16995,7 +16999,7 @@ $:/core/images/storyview-$(storyview)$
 <div created="20210213125853136" modified="20210213125853136" title="$:/state/ShowPaletteEditor">
 <pre>yes</pre>
 </div>
-<div created="20210212142758393" modified="20210308234543679" title="$:/state/sidebar">
+<div created="20210212142758393" modified="20210309023548437" title="$:/state/sidebar">
 <pre>yes</pre>
 </div>
 <div created="20210307171948372" modified="20210307171948372" title="$:/state/sq/streams/current-drag-nextsibling--1018825613">
@@ -17034,8 +17038,8 @@ $:/core/images/storyview-$(storyview)$
 <div created="20210306004915014" modified="20210307173305735" title="$:/state/sq/streams/current-edit-tiddler--944948932">
 <pre>March 4th, 2021 (Thursday)/20210304175237373</pre>
 </div>
-<div created="20210308233933038" modified="20210309023441569" title="$:/state/sq/streams/current-edit-tiddler-1008062975">
-<pre>Welcome to my online space/20210309023441565</pre>
+<div created="20210309023634098" modified="20210309023714418" title="$:/state/sq/streams/current-edit-tiddler-1008062975">
+<pre>Welcome to my online space/20210308234040357</pre>
 </div>
 <div created="20210304035607952" modified="20210304035607952" title="$:/state/sq/streams/current-edit-tiddler-1247449491">
 <pre>March 3rd, 2021 (Wednesday)/20210304035505776</pre>
@@ -17054,6 +17058,9 @@ $:/core/images/storyview-$(storyview)$
 </div>
 <div created="20210308232442545" modified="20210308232619231" title="$:/state/sq/streams/current-edit-tiddler-812925284">
 <pre>Welcome to my online space/20210308232211959/20210308232619226</pre>
+</div>
+<div created="20210309023551224" modified="20210309023553024" title="$:/state/sq/streams/current-edit-tiddler-940958852">
+<pre>semilattice/20210309023553021</pre>
 </div>
 <div created="20210304044429043" modified="20210304044429749" title="$:/state/sq/streams/visibility/March 3rd, 2021 (Wednesday)/20210304043024922--1352630874">
 <pre>show</pre>
@@ -17085,7 +17092,7 @@ $:/core/images/storyview-$(storyview)$
 <div created="20210308231821481" modified="20210308231821481" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/EditorTypes</pre>
 </div>
-<div created="20210212142638676" modified="20210308231819142" title="$:/state/tab-1749438307">
+<div created="20210212142638676" modified="20210309023525084" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20210305235608208" modified="20210307171913257" title="$:/state/tab-2065006209">
@@ -17094,7 +17101,7 @@ $:/core/images/storyview-$(storyview)$
 <div created="20210213150454706" modified="20210308230801140" title="$:/state/tab/search-results/sidebar">
 <pre>$:/plugins/danielo515/ContextPlugin/visualizer</pre>
 </div>
-<div created="20210212142550455" modified="20210308234543680" title="$:/state/tab/sidebar--595412856">
+<div created="20210212142550455" modified="20210309023548437" title="$:/state/tab/sidebar--595412856">
 <pre>$:/drift/side-by-side</pre>
 </div>
 <div created="20210213123539251" modified="20210213125557080" title="$:/state/tab1-488476099">
@@ -17118,7 +17125,7 @@ $:/core/images/storyview-$(storyview)$
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20210309023232436" list="[[All Pages by Date Modified]] [[Welcome to my online space]] [[March 8th, 2021 (Monday)]] [[DAILY NOTES]] Preferences $:/ControlPanel" modified="20210309023242309" title="$:/StoryList">
+<div created="20210309023232436" list="[[Welcome to my online space]] [[March 8th, 2021 (Monday)]] [[DAILY NOTES]] Preferences $:/ControlPanel" modified="20210309023242309" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20201231174724669" list="$:/plugins/tiddlywiki/menubar/items/hamburger $:/plugins/tiddlywiki/menubar/items/topleftbar $:/plugins/tiddlywiki/menubar/items/contents $:/plugins/tiddlywiki/menubar/items/sidebar $:/plugins/tiddlywiki/menubar/items/search $:/plugins/tiddlywiki/menubar/items/pagecontrols $:/plugins/tiddlywiki/menubar/items/server $:/plugins/tiddlywiki/menubar/items/toprightbar" modified="20210212140949203" revision="8" tags="rr-TW5 rr-UI-mod" title="$:/tags/MenuBar" type="text/vnd.tiddlywiki">
@@ -17306,10 +17313,10 @@ $:/core/images/storyview-$(storyview)$
 <div bag="default" created="20201022115207543" modified="20201022115228847" revision="0" title="$:/themes/tiddlywiki/vanilla/metrics/lineheight" type="text/vnd.tiddlywiki">
 <pre>20px</pre>
 </div>
-<div created="20210212142758393" modified="20210308234543679" title="$:/themes/tiddlywiki/vanilla/metrics/sidebarwidth">
-<pre>330px</pre>
+<div created="20210212142758393" modified="20210309023548437" title="$:/themes/tiddlywiki/vanilla/metrics/sidebarwidth">
+<pre>40%</pre>
 </div>
-<div bag="default" created="20200127172539001" modified="20210308233751229" revision="0" tags="tb" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout" type="text/vnd.tiddlywiki">
+<div bag="default" created="20200127172539001" modified="20210309023548437" revision="0" tags="tb" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout" type="text/vnd.tiddlywiki">
 <pre>fluid-fixed</pre>
 </div>
 <div created="20210308231626507" modified="20210308231716763" title="$:/themes/tiddlywiki/vanilla/settings/fontfamily">
@@ -18794,7 +18801,13 @@ With descriptions of the modifications made to other people's code
 <div created="20210307173739946" modified="20210307173739946" title="self-inquiry">
 <pre></pre>
 </div>
-<div created="20210308232812622" modified="20210308232836308" tags="" title="semilattice">
+<div created="20210308232812622" modified="20210309023553024" stream-list="semilattice/20210309023551219 semilattice/20210309023553021" stream-type="default" tags="$:/rr/pinned" title="semilattice">
+<pre></pre>
+</div>
+<div created="20210309023551222" modified="20210309023552782" parent="semilattice" stream-type="default" title="semilattice/20210309023551219">
+<pre>a set</pre>
+</div>
+<div created="20210309023553023" modified="20210309023553023" parent="semilattice" stream-type="default" title="semilattice/20210309023553021">
 <pre></pre>
 </div>
 <div created="20210309023425698" modified="20210309023425698" title="systems">
@@ -18949,16 +18962,16 @@ Right click on a bullet to access context menu
 <div created="20210309023441569" modified="20210309023441569" title="vulnerability">
 <pre></pre>
 </div>
-<div created="20210308230348215" modified="20210308234259515" sort-date="20210308" stream-list="[[Welcome to my online space/20210308233258239]] [[Welcome to my online space/20210308232719709]] [[Welcome to my online space/20210308232907501]] [[Welcome to my online space/20210308233316572]]" stream-type="default" tags="Introduction" title="Welcome to my online space">
+<div created="20210308230348215" modified="20210309023634098" sort-date="20210308" stream-list="[[Welcome to my online space/20210308233258239]] [[Welcome to my online space/20210308232719709]] [[Welcome to my online space/20210308232907501]] [[Welcome to my online space/20210308233316572]]" stream-type="default" tags="Introduction" title="Welcome to my online space">
 <pre></pre>
 </div>
 <div _canonical_uri="http://contentsmagazine.com/images/fig_nosense/semilattice-vs-tree-600x400.png" created="20210308232211964" modified="20210308232851108" parent="Welcome to my online space/20210308232719709" stream-list="" stream-type="default" title="Welcome to my online space/20210308232211959" type="image/png">
 <pre></pre>
 </div>
-<div created="20210308232719712" modified="20210309023309908" parent="Welcome to my online space" stream-list="[[Welcome to my online space/20210308232723396]] [[Welcome to my online space/20210308232211959]]" stream-type="default" time-pinned="20210308233113" title="Welcome to my online space/20210308232719709">
+<div created="20210308232719712" modified="20210309023548440" parent="Welcome to my online space" stream-list="[[Welcome to my online space/20210308232723396]] [[Welcome to my online space/20210308232211959]]" stream-type="default" time-pinned="20210309023548" title="Welcome to my online space/20210308232719709">
 <pre>This space is organized like a [[semilattice]], not like a [[tree]] </pre>
 </div>
-<div created="20210308232907506" modified="20210309023331402" parent="Welcome to my online space" stream-list="[[Welcome to my online space/20210308234228650]] [[Welcome to my online space/20210308233226674]] [[Welcome to my online space/20210308233236002]] [[Welcome to my online space/20210308233129474]] [[Welcome to my online space/20210308234357974]]" stream-type="default" title="Welcome to my online space/20210308232907501">
+<div created="20210308232907506" modified="20210309023621952" parent="Welcome to my online space" stream-list="[[Welcome to my online space/20210308234228650]] [[Welcome to my online space/20210308233226674]] [[Welcome to my online space/20210308233236002]] [[Welcome to my online space/20210308233129474]]" stream-type="default" title="Welcome to my online space/20210308232907501">
 <pre>I believe that:</pre>
 </div>
 <div created="20210308233129479" modified="20210309023441569" parent="Welcome to my online space/20210308232907501" stream-list="[[Welcome to my online space/20210309023329781]] [[Welcome to my online space/20210309023335009]] [[Welcome to my online space/20210309023425693]] [[Welcome to my online space/20210309023441565]]" stream-type="default" title="Welcome to my online space/20210308233129474">
@@ -18970,8 +18983,8 @@ Right click on a bullet to access context menu
 <div created="20210308233236004" modified="20210308234242558" parent="Welcome to my online space/20210308232907501" stream-type="default" title="Welcome to my online space/20210308233236002">
 <pre>[[Reading is learning]]</pre>
 </div>
-<div created="20210308233258242" modified="20210308234153348" parent="Welcome to my online space" stream-list="[[Welcome to my online space/20210308233701188]] [[Welcome to my online space/20210308234040357]] [[Welcome to my online space/20210308233427920]] [[Welcome to my online space/20210308233958603]] [[Welcome to my online space/20210308234153344]]" stream-type="default" title="Welcome to my online space/20210308233258239">
-<pre>Very importantly, some shoutouts. This  learning space would not be possible without the work of:</pre>
+<div created="20210308233258242" modified="20210309023709315" parent="Welcome to my online space" stream-list="[[Welcome to my online space/20210308233701188]] [[Welcome to my online space/20210308234040357]] [[Welcome to my online space/20210308233427920]] [[Welcome to my online space/20210308233958603]] [[Welcome to my online space/20210308234153344]]" stream-type="default" title="Welcome to my online space/20210308233258239">
+<pre>This  learning space would not be possible without the work of the following amazing people:</pre>
 </div>
 <div created="20210308233316576" modified="20210308233316576" parent="Welcome to my online space" stream-type="default" title="Welcome to my online space/20210308233316572">
 <pre></pre>
@@ -18993,9 +19006,6 @@ Right click on a bullet to access context menu
 </div>
 <div created="20210308234228654" modified="20210308234232852" parent="Welcome to my online space/20210308232907501" stream-list="" stream-type="default" title="Welcome to my online space/20210308234228650">
 <pre>learning should be [[nonlinear]] and [[diverse]]</pre>
-</div>
-<div created="20210308234357977" modified="20210308234357977" parent="Welcome to my online space/20210308232907501" stream-type="default" title="Welcome to my online space/20210308234357974">
-<pre></pre>
 </div>
 <div created="20210309023329784" modified="20210309023350159" parent="Welcome to my online space/20210308233129474" stream-list="" stream-type="default" title="Welcome to my online space/20210309023329781">
 <pre>[[curiosity]]</pre>
