--- a/wiki/index.html
+++ b/wiki/index.html
@@ -151,6 +151,8 @@ Error message and password prompt
 
 <li>#Event</li>
 
+<li>#FleetingNotes</li>
+
 <li>#LiteratureNotes</li>
 
 <li>#supported|by</li>
@@ -631,6 +633,8 @@ Error message and password prompt
 
 <li>$:/state/sq/streams/current-edit-tiddler-438074055</li>
 
+<li>$:/state/sq/streams/current-edit-tiddler-715166808</li>
+
 <li>$:/state/sq/streams/current-edit-tiddler-776439157</li>
 
 <li>$:/state/sq/streams/current-edit-tiddler-812925284</li>
@@ -778,6 +782,8 @@ Error message and password prompt
 <li>2020/10/26/20201026122812845/20201026125026745</li>
 
 <li>2020/10/26/20201026122846202</li>
+
+<li>A City is Not a Tree</li>
 
 <li>A clean interface</li>
 
@@ -954,6 +960,8 @@ Error message and password prompt
 <li>Block Level Linking/20201108191048839</li>
 
 <li>brain voxel image</li>
+
+<li>Christopher Alexander</li>
 
 <li>Cognitive Emotional Regulation</li>
 
@@ -1324,6 +1332,12 @@ Error message and password prompt
 <li>March 7th, 2021 (Sunday)/20210307174949169</li>
 
 <li>March 8th, 2021 (Monday)</li>
+
+<li>March 9th, 2021 (Tuesday)</li>
+
+<li>March 9th, 2021 (Tuesday)/20210309181832915</li>
+
+<li>March 9th, 2021 (Tuesday)/20210309181926753</li>
 
 <li>Martin Luther King Jr</li>
 
@@ -1866,7 +1880,10 @@ Error message and password prompt
 <div created="20210304043501221" modified="20210304043501221" title="#Event">
 <pre></pre>
 </div>
-<div created="20210304174210785" modified="20210304174210785" title="#LiteratureNotes">
+<div created="20210309181926758" modified="20210309181957506" tags="$:/rr/pinned" title="#FleetingNotes">
+<pre></pre>
+</div>
+<div created="20210304174210785" modified="20210309181939725" tags="" title="#LiteratureNotes">
 <pre></pre>
 </div>
 <div created="20210304035505779" modified="20210304035526240" title="#supported|by">
@@ -1993,10 +2010,10 @@ Error message and password prompt
 <div created="20201201192342772" modified="20201201192342772" title="$:/config/PageControlButtons/Visibility/$:/rr/PageControls/Show-Hide-References">
 <pre>hide</pre>
 </div>
-<div created="20210212142758394" modified="20210309180643429" title="$:/config/plugins/menubar/MenuItems/Visibility/$:/plugins/tiddlywiki/menubar/items/contents">
+<div created="20210212142758394" modified="20210309181943707" title="$:/config/plugins/menubar/MenuItems/Visibility/$:/plugins/tiddlywiki/menubar/items/contents">
 <pre>show</pre>
 </div>
-<div created="20210212142758394" modified="20210309180643430" title="$:/config/plugins/menubar/MenuItems/Visibility/$:/plugins/tiddlywiki/menubar/items/hamburger">
+<div created="20210212142758394" modified="20210309181943707" title="$:/config/plugins/menubar/MenuItems/Visibility/$:/plugins/tiddlywiki/menubar/items/hamburger">
 <pre>show</pre>
 </div>
 <div created="20210212142842192" modified="20210212195912023" title="$:/config/plugins/menubar/MenuItems/Visibility/$:/plugins/tiddlywiki/menubar/items/pagecontrols">
@@ -12381,7 +12398,7 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 <div created="20210213124753025" modified="20210308234637913" title="$:/DefaultTiddlers">
 <pre>[[Welcome to my online space]]</pre>
 </div>
-<div bag="default" created="20210210181701060" creator="akhater" list-before="$:/core/ui/SideBar/Open" modified="20210309180643428" modifier="akhater" revision="118" tags="$:/tags/SideBar" title="$:/drift/side-by-side" type="text/vnd.tiddlywiki">
+<div bag="default" created="20210210181701060" creator="akhater" list-before="$:/core/ui/SideBar/Open" modified="20210309181943705" modifier="akhater" revision="118" tags="$:/tags/SideBar" title="$:/drift/side-by-side" type="text/vnd.tiddlywiki">
 <pre>\define drop-actions()
 &lt;$action-listops $tiddler=&quot;$:/rr/pinned&quot; $subfilter=&quot;+[insertbefore:currentTiddler&lt;actionTiddler&gt;]&quot;/&gt;
 &lt;$fieldmangler tiddler=&lt;&lt;actionTiddler&gt;&gt;&gt;
@@ -16489,7 +16506,7 @@ Copy stream to clipboard as `&lt;ul&gt;&lt;li&gt;` list
 &lt;p align=right&gt;&lt;small&gt;(//Transclusion of [[$X$]] as list//)&lt;/small&gt;&lt;/p&gt;
 \end</pre>
 </div>
-<div bag="default" created="20210210175237537" modified="20210309180643427" revision="43" tags="rr-TW5 rr-UX" title="$:/rr/pinned" type="text/vnd.tiddlywiki">
+<div bag="default" created="20210210175237537" modified="20210309181943705" revision="43" tags="rr-TW5 rr-UX" title="$:/rr/pinned" type="text/vnd.tiddlywiki">
 <pre>active</pre>
 </div>
 <div bag="default" caption="{{$:/core/images/close-button}} {{$:/language/Buttons/Close/Caption}}" created="20210103082124883" creator="akhater" description="{{$:/language/Buttons/Close/Hint}}" modified="20210211165206078" modifier="akhater" revision="19" tags="rr-UX rr-TW5" title="$:/rr/side-by-side/Buttons/close" type="text/vnd.tiddlywiki">
@@ -17072,7 +17089,7 @@ $:/core/images/storyview-$(storyview)$
 <div created="20210213125853136" modified="20210213125853136" title="$:/state/ShowPaletteEditor">
 <pre>yes</pre>
 </div>
-<div created="20210212142758393" modified="20210309180643429" title="$:/state/sidebar">
+<div created="20210212142758393" modified="20210309181943707" title="$:/state/sidebar">
 <pre>yes</pre>
 </div>
 <div created="20210307171948372" modified="20210307171948372" title="$:/state/sq/streams/current-drag-nextsibling--1018825613">
@@ -17141,6 +17158,9 @@ $:/core/images/storyview-$(storyview)$
 <div created="20210309181158271" modified="20210309181158271" title="$:/state/sq/streams/current-edit-tiddler-438074055">
 <pre>non-empty finite subset/20210309181158265</pre>
 </div>
+<div created="20210309181832922" modified="20210309181942407" title="$:/state/sq/streams/current-edit-tiddler-715166808">
+<pre>March 9th, 2021 (Tuesday)/20210309181926753</pre>
+</div>
 <div created="20210307174940791" modified="20210307175108372" title="$:/state/sq/streams/current-edit-tiddler-776439157">
 <pre>March 7th, 2021 (Sunday)/20210307174735213</pre>
 </div>
@@ -17189,7 +17209,7 @@ $:/core/images/storyview-$(storyview)$
 <div created="20210213150454706" modified="20210308230801140" title="$:/state/tab/search-results/sidebar">
 <pre>$:/plugins/danielo515/ContextPlugin/visualizer</pre>
 </div>
-<div created="20210212142550455" modified="20210309180643429" title="$:/state/tab/sidebar--595412856">
+<div created="20210212142550455" modified="20210309181943707" title="$:/state/tab/sidebar--595412856">
 <pre>$:/drift/side-by-side</pre>
 </div>
 <div created="20210213123539251" modified="20210213125557080" title="$:/state/tab1-488476099">
@@ -17213,7 +17233,7 @@ $:/core/images/storyview-$(storyview)$
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20210309023232436" list="[[Welcome to my online space]]" modified="20210309181611671" title="$:/StoryList">
+<div created="20210309023232436" list="#FleetingNotes [[DAILY NOTES]] [[Welcome to my online space]]" modified="20210309181951592" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20201231174724669" list="$:/plugins/tiddlywiki/menubar/items/hamburger $:/plugins/tiddlywiki/menubar/items/topleftbar $:/plugins/tiddlywiki/menubar/items/contents $:/plugins/tiddlywiki/menubar/items/sidebar $:/plugins/tiddlywiki/menubar/items/search $:/plugins/tiddlywiki/menubar/items/pagecontrols $:/plugins/tiddlywiki/menubar/items/server $:/plugins/tiddlywiki/menubar/items/toprightbar" modified="20210212140949203" revision="8" tags="rr-TW5 rr-UI-mod" title="$:/tags/MenuBar" type="text/vnd.tiddlywiki">
@@ -17410,7 +17430,7 @@ $:/core/images/storyview-$(storyview)$
 <div created="20210309024010107" modified="20210309024011896" title="$:/themes/tiddlywiki/vanilla/metrics/sidebarbreakpoint">
 <pre>800px</pre>
 </div>
-<div created="20210212142758393" modified="20210309180643429" title="$:/themes/tiddlywiki/vanilla/metrics/sidebarwidth">
+<div created="20210212142758393" modified="20210309181943707" title="$:/themes/tiddlywiki/vanilla/metrics/sidebarwidth">
 <pre>40%</pre>
 </div>
 <div created="20210309024108061" modified="20210309024121494" title="$:/themes/tiddlywiki/vanilla/metrics/storyright">
@@ -17422,7 +17442,7 @@ $:/core/images/storyview-$(storyview)$
 <div created="20210309024649805" modified="20210309024715258" title="$:/themes/tiddlywiki/vanilla/metrics/tiddlerwidth">
 <pre>760px</pre>
 </div>
-<div bag="default" created="20200127172539001" modified="20210309180643428" revision="0" tags="tb" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout" type="text/vnd.tiddlywiki">
+<div bag="default" created="20200127172539001" modified="20210309181943706" revision="0" tags="tb" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout" type="text/vnd.tiddlywiki">
 <pre>fluid-fixed</pre>
 </div>
 <div created="20210309024510497" modified="20210309024524320" title="$:/themes/tiddlywiki/vanilla/settings/backgroundimage">
@@ -17520,6 +17540,9 @@ $:/core/images/storyview-$(storyview)$
 </div>
 <div created="20201026122846203" modified="20210214155234634" parent="November 30th, 2020 (Monday)" stream-list="2020/10/26/20201026112941684 2020/10/26/20201026113024501 2020/10/26/20201026113635918 2020/10/26/20201026122336354 2020/10/26/20201026122348801" stream-type="default" title="2020/10/26/20201026122846202">
 <pre>Some example texts for showing up in [[Queries, transclusions, and other macros]]</pre>
+</div>
+<div created="20210309181926761" modified="20210309181926761" title="A City is Not a Tree">
+<pre></pre>
 </div>
 <div bag="default" created="20201023184942177" modified="20210213130836295" revision="0" stream-list="[[A clean interface/20201108182944616]] [[A clean interface/20201108183410637]] [[A clean interface/09.39-25123]] [[A clean interface/20210213130757639]] [[A clean interface/09.38-5166]]" stream-type="default" title="A clean interface" type="text/vnd.tiddlywiki">
 <pre></pre>
@@ -17822,6 +17845,9 @@ $:/core/images/storyview-$(storyview)$
 <pre>For example `[[pretty link that's easy to read|incrediblylongandhardtobearlinktothesource]]` will show as `pretty link that's easy to read`</pre>
 </div>
 <div _canonical_uri="https://www.frontiersin.org/files/Articles/81994/fnbeh-08-00165-HTML/image_m/fnbeh-08-00165-g002.jpg" created="20210304181122933" modified="20210307170211633" parent="March 4th, 2021 (Thursday)/20210304181631281" stream-list="" stream-type="default" title="brain voxel image" type="image/jpeg">
+<pre></pre>
+</div>
+<div created="20210309181926759" modified="20210309181926759" title="Christopher Alexander">
 <pre></pre>
 </div>
 <div created="20210304231701357" modified="20210304231701357" title="Cognitive Emotional Regulation">
@@ -18373,7 +18399,7 @@ See what happens to this block</pre>
 <div created="20210307165533654" modified="20210307173251725" parent="March 7th, 2021 (Sunday)" stream-list="[[March 7th, 2021 (Sunday)/20210307165738882]] [[March 7th, 2021 (Sunday)/20210307170236698]] [[March 7th, 2021 (Sunday)/20210307170320560]] [[March 7th, 2021 (Sunday)/20210307170015702]] [[March 7th, 2021 (Sunday)/20210307171254613]]" stream-type="default" title="March 7th, 2021 (Sunday)/20210307165533652">
 <pre>Source: [[Voxel-based lesion symptom mapping|https://www.nature.com/articles/nn1050#]]</pre>
 </div>
-<div created="20210307165738885" modified="20210307171052666" parent="March 7th, 2021 (Sunday)/20210307165533652" stream-type="default" title="March 7th, 2021 (Sunday)/20210307165738882">
+<div created="20210307165738885" modified="20210309181934848" parent="March 7th, 2021 (Sunday)/20210307165533652" stream-type="default" time-pinned="20210309181934" title="March 7th, 2021 (Sunday)/20210307165738882">
 <pre>[[#LiteratureNotes]] [[voxel based lesion system mapping (VLSM)]] was used to measure speech fluency and language comprehension in left-hemisphere damaged aphasic patients</pre>
 </div>
 <div created="20210307170015704" modified="20210307171256294" parent="March 7th, 2021 (Sunday)/20210307165533652" stream-list="[[March 7th, 2021 (Sunday)/20210307171023001]]" stream-type="default" time-pinned="20210307170817" title="March 7th, 2021 (Sunday)/20210307170015702">
@@ -18428,6 +18454,15 @@ See what happens to this block</pre>
 <pre>The insula has been consistently related to [[interoception]], to awareness of internal visceral states of the body and emotional and metacognitive self-consciousness</pre>
 </div>
 <div created="20210308234651132" modified="20210308234651132" sort-date="20210308" tags="DailyNote" title="March 8th, 2021 (Monday)">
+<pre></pre>
+</div>
+<div created="20210309181827846" modified="20210309181926757" sort-date="20210309" stream-list="[[March 9th, 2021 (Tuesday)/20210309181832915]] [[March 9th, 2021 (Tuesday)/20210309181926753]]" stream-type="default" tags="DailyNote" title="March 9th, 2021 (Tuesday)">
+<pre></pre>
+</div>
+<div created="20210309181832920" modified="20210309181957516" parent="March 9th, 2021 (Tuesday)" stream-type="default" time-pinned="20210309181943" title="March 9th, 2021 (Tuesday)/20210309181832915">
+<pre>[[#FleetingNotes]] [[Christopher Alexander]] wrote an essay in 1965 [[A City is Not a Tree]]</pre>
+</div>
+<div created="20210309181926756" modified="20210309181926756" parent="March 9th, 2021 (Tuesday)" stream-type="default" title="March 9th, 2021 (Tuesday)/20210309181926753">
 <pre></pre>
 </div>
 <div created="20201026122348804" modified="20201026122348804" title="Martin Luther King Jr">
