--- a/wiki/index.html
+++ b/wiki/index.html
@@ -599,7 +599,11 @@ Error message and password prompt
 
 <li>$:/state/sq/streams/current-edit-tiddler--1328577840</li>
 
+<li>$:/state/sq/streams/current-edit-tiddler--1384488189</li>
+
 <li>$:/state/sq/streams/current-edit-tiddler--1538080560</li>
+
+<li>$:/state/sq/streams/current-edit-tiddler--159056658</li>
 
 <li>$:/state/sq/streams/current-edit-tiddler--1675230480</li>
 
@@ -638,6 +642,8 @@ Error message and password prompt
 <li>$:/state/sq/streams/current-edit-tiddler-776439157</li>
 
 <li>$:/state/sq/streams/current-edit-tiddler-812925284</li>
+
+<li>$:/state/sq/streams/current-edit-tiddler-904137808</li>
 
 <li>$:/state/sq/streams/current-edit-tiddler-940958852</li>
 
@@ -784,6 +790,8 @@ Error message and password prompt
 <li>2020/10/26/20201026122846202</li>
 
 <li>A City is Not a Tree</li>
+
+<li>A City is Not a Tree/20210309182103254</li>
 
 <li>A clean interface</li>
 
@@ -963,6 +971,10 @@ Error message and password prompt
 
 <li>Christopher Alexander</li>
 
+<li>Christopher Alexander/20210309183226540</li>
+
+<li>Christopher Alexander/20210309183323400</li>
+
 <li>Cognitive Emotional Regulation</li>
 
 <li>Configuration</li>
@@ -1074,6 +1086,8 @@ Error message and password prompt
 <li>February 13th, 2021 (Saturday)</li>
 
 <li>feedback loops</li>
+
+<li>FleetingNotes/20210309182006182</li>
 
 <li>fMRI</li>
 
@@ -1338,6 +1352,12 @@ Error message and password prompt
 <li>March 9th, 2021 (Tuesday)/20210309181832915</li>
 
 <li>March 9th, 2021 (Tuesday)/20210309181926753</li>
+
+<li>March 9th, 2021 (Tuesday)/20210309183710961</li>
+
+<li>March 9th, 2021 (Tuesday)/20210309183723547</li>
+
+<li>March 9th, 2021 (Tuesday)/20210309183922621</li>
 
 <li>Martin Luther King Jr</li>
 
@@ -1697,6 +1717,8 @@ Error message and password prompt
 
 <li>trisaster</li>
 
+<li>University of California, Berkeley</li>
+
 <li>User Manual</li>
 
 <li>User Manual/20201106165600133</li>
@@ -1750,6 +1772,8 @@ Error message and password prompt
 <li>voxel based morphometry (VBM)</li>
 
 <li>vulnerability</li>
+
+<li>Ward Cunningham</li>
 
 <li>Welcome to my online space</li>
 
@@ -1847,6 +1871,8 @@ Error message and password prompt
 
 <li>what</li>
 
+<li>wiki</li>
+
 <li>working memory</li>
 
 <li>Writing is thinking</li>
@@ -1880,7 +1906,7 @@ Error message and password prompt
 <div created="20210304043501221" modified="20210304043501221" title="#Event">
 <pre></pre>
 </div>
-<div created="20210309181926758" modified="20210309181957506" tags="$:/rr/pinned" title="#FleetingNotes">
+<div created="20210309181926758" modified="20210309182006189" stream-list="FleetingNotes/20210309182006182" stream-type="default" tags="" title="#FleetingNotes">
 <pre></pre>
 </div>
 <div created="20210304174210785" modified="20210309181939725" tags="" title="#LiteratureNotes">
@@ -2010,10 +2036,10 @@ Error message and password prompt
 <div created="20201201192342772" modified="20201201192342772" title="$:/config/PageControlButtons/Visibility/$:/rr/PageControls/Show-Hide-References">
 <pre>hide</pre>
 </div>
-<div created="20210212142758394" modified="20210309181943707" title="$:/config/plugins/menubar/MenuItems/Visibility/$:/plugins/tiddlywiki/menubar/items/contents">
+<div created="20210212142758394" modified="20210309183613495" title="$:/config/plugins/menubar/MenuItems/Visibility/$:/plugins/tiddlywiki/menubar/items/contents">
 <pre>show</pre>
 </div>
-<div created="20210212142758394" modified="20210309181943707" title="$:/config/plugins/menubar/MenuItems/Visibility/$:/plugins/tiddlywiki/menubar/items/hamburger">
+<div created="20210212142758394" modified="20210309183613495" title="$:/config/plugins/menubar/MenuItems/Visibility/$:/plugins/tiddlywiki/menubar/items/hamburger">
 <pre>show</pre>
 </div>
 <div created="20210212142842192" modified="20210212195912023" title="$:/config/plugins/menubar/MenuItems/Visibility/$:/plugins/tiddlywiki/menubar/items/pagecontrols">
@@ -12398,7 +12424,7 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 <div created="20210213124753025" modified="20210308234637913" title="$:/DefaultTiddlers">
 <pre>[[Welcome to my online space]]</pre>
 </div>
-<div bag="default" created="20210210181701060" creator="akhater" list-before="$:/core/ui/SideBar/Open" modified="20210309181943705" modifier="akhater" revision="118" tags="$:/tags/SideBar" title="$:/drift/side-by-side" type="text/vnd.tiddlywiki">
+<div bag="default" created="20210210181701060" creator="akhater" list-before="$:/core/ui/SideBar/Open" modified="20210309183613493" modifier="akhater" revision="118" tags="$:/tags/SideBar" title="$:/drift/side-by-side" type="text/vnd.tiddlywiki">
 <pre>\define drop-actions()
 &lt;$action-listops $tiddler=&quot;$:/rr/pinned&quot; $subfilter=&quot;+[insertbefore:currentTiddler&lt;actionTiddler&gt;]&quot;/&gt;
 &lt;$fieldmangler tiddler=&lt;&lt;actionTiddler&gt;&gt;&gt;
@@ -16506,7 +16532,7 @@ Copy stream to clipboard as `&lt;ul&gt;&lt;li&gt;` list
 &lt;p align=right&gt;&lt;small&gt;(//Transclusion of [[$X$]] as list//)&lt;/small&gt;&lt;/p&gt;
 \end</pre>
 </div>
-<div bag="default" created="20210210175237537" modified="20210309181943705" revision="43" tags="rr-TW5 rr-UX" title="$:/rr/pinned" type="text/vnd.tiddlywiki">
+<div bag="default" created="20210210175237537" modified="20210309183613493" revision="43" tags="rr-TW5 rr-UX" title="$:/rr/pinned" type="text/vnd.tiddlywiki">
 <pre>active</pre>
 </div>
 <div bag="default" caption="{{$:/core/images/close-button}} {{$:/language/Buttons/Close/Caption}}" created="20210103082124883" creator="akhater" description="{{$:/language/Buttons/Close/Hint}}" modified="20210211165206078" modifier="akhater" revision="19" tags="rr-UX rr-TW5" title="$:/rr/side-by-side/Buttons/close" type="text/vnd.tiddlywiki">
@@ -17089,7 +17115,7 @@ $:/core/images/storyview-$(storyview)$
 <div created="20210213125853136" modified="20210213125853136" title="$:/state/ShowPaletteEditor">
 <pre>yes</pre>
 </div>
-<div created="20210212142758393" modified="20210309181943707" title="$:/state/sidebar">
+<div created="20210212142758393" modified="20210309183613495" title="$:/state/sidebar">
 <pre>yes</pre>
 </div>
 <div created="20210307171948372" modified="20210307171948372" title="$:/state/sq/streams/current-drag-nextsibling--1018825613">
@@ -17107,8 +17133,14 @@ $:/core/images/storyview-$(storyview)$
 <div created="20210308233755979" modified="20210308233841704" title="$:/state/sq/streams/current-edit-tiddler--1328577840">
 <pre>TiddlyWiki/20210308233841698</pre>
 </div>
+<div created="20210309182006189" modified="20210309182006189" title="$:/state/sq/streams/current-edit-tiddler--1384488189">
+<pre>FleetingNotes/20210309182006182</pre>
+</div>
 <div created="20210307170547339" modified="20210307170648118" title="$:/state/sq/streams/current-edit-tiddler--1538080560">
 <pre>deep parietal white matter/20210307170648114</pre>
+</div>
+<div created="20210309183226546" modified="20210309183323405" title="$:/state/sq/streams/current-edit-tiddler--159056658">
+<pre>Christopher Alexander/20210309183323400</pre>
 </div>
 <div created="20210304181122935" modified="20210304181122935" title="$:/state/sq/streams/current-edit-tiddler--1675230480">
 <pre>March 4th, 2021 (Thursday)/20210304181122929</pre>
@@ -17158,14 +17190,17 @@ $:/core/images/storyview-$(storyview)$
 <div created="20210309181158271" modified="20210309181158271" title="$:/state/sq/streams/current-edit-tiddler-438074055">
 <pre>non-empty finite subset/20210309181158265</pre>
 </div>
-<div created="20210309181832922" modified="20210309181942407" title="$:/state/sq/streams/current-edit-tiddler-715166808">
-<pre>March 9th, 2021 (Tuesday)/20210309181926753</pre>
+<div created="20210309183915243" modified="20210309183922624" title="$:/state/sq/streams/current-edit-tiddler-715166808">
+<pre>March 9th, 2021 (Tuesday)/20210309183922621</pre>
 </div>
 <div created="20210307174940791" modified="20210307175108372" title="$:/state/sq/streams/current-edit-tiddler-776439157">
 <pre>March 7th, 2021 (Sunday)/20210307174735213</pre>
 </div>
 <div created="20210308232442545" modified="20210308232619231" title="$:/state/sq/streams/current-edit-tiddler-812925284">
 <pre>Welcome to my online space/20210308232211959/20210308232619226</pre>
+</div>
+<div created="20210309182103261" modified="20210309182103261" title="$:/state/sq/streams/current-edit-tiddler-904137808">
+<pre>A City is Not a Tree/20210309182103254</pre>
 </div>
 <div created="20210309023551224" modified="20210309181145009" title="$:/state/sq/streams/current-edit-tiddler-940958852">
 <pre>semilattice/20210309180623086</pre>
@@ -17209,7 +17244,7 @@ $:/core/images/storyview-$(storyview)$
 <div created="20210213150454706" modified="20210308230801140" title="$:/state/tab/search-results/sidebar">
 <pre>$:/plugins/danielo515/ContextPlugin/visualizer</pre>
 </div>
-<div created="20210212142550455" modified="20210309181943707" title="$:/state/tab/sidebar--595412856">
+<div created="20210212142550455" modified="20210309183613495" title="$:/state/tab/sidebar--595412856">
 <pre>$:/drift/side-by-side</pre>
 </div>
 <div created="20210213123539251" modified="20210213125557080" title="$:/state/tab1-488476099">
@@ -17233,7 +17268,7 @@ $:/core/images/storyview-$(storyview)$
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20210309023232436" list="#FleetingNotes [[DAILY NOTES]] [[Welcome to my online space]]" modified="20210309181951592" title="$:/StoryList">
+<div list="#LiteratureNotes [[DAILY NOTES]] [[Welcome to my online space]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20201231174724669" list="$:/plugins/tiddlywiki/menubar/items/hamburger $:/plugins/tiddlywiki/menubar/items/topleftbar $:/plugins/tiddlywiki/menubar/items/contents $:/plugins/tiddlywiki/menubar/items/sidebar $:/plugins/tiddlywiki/menubar/items/search $:/plugins/tiddlywiki/menubar/items/pagecontrols $:/plugins/tiddlywiki/menubar/items/server $:/plugins/tiddlywiki/menubar/items/toprightbar" modified="20210212140949203" revision="8" tags="rr-TW5 rr-UI-mod" title="$:/tags/MenuBar" type="text/vnd.tiddlywiki">
@@ -17430,7 +17465,7 @@ $:/core/images/storyview-$(storyview)$
 <div created="20210309024010107" modified="20210309024011896" title="$:/themes/tiddlywiki/vanilla/metrics/sidebarbreakpoint">
 <pre>800px</pre>
 </div>
-<div created="20210212142758393" modified="20210309181943707" title="$:/themes/tiddlywiki/vanilla/metrics/sidebarwidth">
+<div created="20210212142758393" modified="20210309183613494" title="$:/themes/tiddlywiki/vanilla/metrics/sidebarwidth">
 <pre>40%</pre>
 </div>
 <div created="20210309024108061" modified="20210309024121494" title="$:/themes/tiddlywiki/vanilla/metrics/storyright">
@@ -17442,7 +17477,7 @@ $:/core/images/storyview-$(storyview)$
 <div created="20210309024649805" modified="20210309024715258" title="$:/themes/tiddlywiki/vanilla/metrics/tiddlerwidth">
 <pre>760px</pre>
 </div>
-<div bag="default" created="20200127172539001" modified="20210309181943706" revision="0" tags="tb" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout" type="text/vnd.tiddlywiki">
+<div bag="default" created="20200127172539001" modified="20210309183613494" revision="0" tags="tb" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout" type="text/vnd.tiddlywiki">
 <pre>fluid-fixed</pre>
 </div>
 <div created="20210309024510497" modified="20210309024524320" title="$:/themes/tiddlywiki/vanilla/settings/backgroundimage">
@@ -17541,8 +17576,11 @@ $:/core/images/storyview-$(storyview)$
 <div created="20201026122846203" modified="20210214155234634" parent="November 30th, 2020 (Monday)" stream-list="2020/10/26/20201026112941684 2020/10/26/20201026113024501 2020/10/26/20201026113635918 2020/10/26/20201026122336354 2020/10/26/20201026122348801" stream-type="default" title="2020/10/26/20201026122846202">
 <pre>Some example texts for showing up in [[Queries, transclusions, and other macros]]</pre>
 </div>
-<div created="20210309181926761" modified="20210309181926761" title="A City is Not a Tree">
+<div created="20210309181926761" modified="20210309182103260" stream-list="[[A City is Not a Tree/20210309182103254]]" stream-type="default" tags="$:/rr/pinned" title="A City is Not a Tree">
 <pre></pre>
+</div>
+<div created="20210309182103258" modified="20210309183706186" parent="A City is Not a Tree" stream-type="default" title="A City is Not a Tree/20210309182103254">
+<pre>[ </pre>
 </div>
 <div bag="default" created="20201023184942177" modified="20210213130836295" revision="0" stream-list="[[A clean interface/20201108182944616]] [[A clean interface/20201108183410637]] [[A clean interface/09.39-25123]] [[A clean interface/20210213130757639]] [[A clean interface/09.38-5166]]" stream-type="default" title="A clean interface" type="text/vnd.tiddlywiki">
 <pre></pre>
@@ -17847,7 +17885,13 @@ $:/core/images/storyview-$(storyview)$
 <div _canonical_uri="https://www.frontiersin.org/files/Articles/81994/fnbeh-08-00165-HTML/image_m/fnbeh-08-00165-g002.jpg" created="20210304181122933" modified="20210307170211633" parent="March 4th, 2021 (Thursday)/20210304181631281" stream-list="" stream-type="default" title="brain voxel image" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20210309181926759" modified="20210309181926759" title="Christopher Alexander">
+<div created="20210309181926759" modified="20210309183323405" stream-list="[[Christopher Alexander/20210309183226540]] [[Christopher Alexander/20210309183323400]]" stream-type="default" tags="$:/rr/pinned" title="Christopher Alexander">
+<pre></pre>
+</div>
+<div created="20210309183226544" modified="20210309183322067" parent="Christopher Alexander" stream-type="default" title="Christopher Alexander/20210309183226540">
+<pre>Christopher Alexander is a widely influential British American architect and design theorist, currently professor emeritus at [[University of California, Berkeley]]</pre>
+</div>
+<div created="20210309183323403" modified="20210309183435182" parent="Christopher Alexander" stream-type="default" title="Christopher Alexander/20210309183323400">
 <pre></pre>
 </div>
 <div created="20210304231701357" modified="20210304231701357" title="Cognitive Emotional Regulation">
@@ -18061,6 +18105,9 @@ Copy stream to clipboard as HTML
 <pre></pre>
 </div>
 <div created="20210304051217279" modified="20210304051217279" title="feedback loops">
+<pre></pre>
+</div>
+<div created="20210309182006187" modified="20210309182006187" parent="#FleetingNotes" stream-type="default" title="FleetingNotes/20210309182006182">
 <pre></pre>
 </div>
 <div created="20210304234401442" modified="20210304234401442" title="fMRI">
@@ -18456,13 +18503,22 @@ See what happens to this block</pre>
 <div created="20210308234651132" modified="20210308234651132" sort-date="20210308" tags="DailyNote" title="March 8th, 2021 (Monday)">
 <pre></pre>
 </div>
-<div created="20210309181827846" modified="20210309181926757" sort-date="20210309" stream-list="[[March 9th, 2021 (Tuesday)/20210309181832915]] [[March 9th, 2021 (Tuesday)/20210309181926753]]" stream-type="default" tags="DailyNote" title="March 9th, 2021 (Tuesday)">
+<div created="20210309181827846" modified="20210309183922624" sort-date="20210309" stream-list="[[March 9th, 2021 (Tuesday)/20210309183723547]] [[March 9th, 2021 (Tuesday)/20210309181832915]] [[March 9th, 2021 (Tuesday)/20210309183922621]] [[March 9th, 2021 (Tuesday)/20210309181926753]] [[March 9th, 2021 (Tuesday)/20210309183710961]]" stream-type="default" tags="DailyNote" title="March 9th, 2021 (Tuesday)">
 <pre></pre>
 </div>
-<div created="20210309181832920" modified="20210309181957516" parent="March 9th, 2021 (Tuesday)" stream-type="default" time-pinned="20210309181943" title="March 9th, 2021 (Tuesday)/20210309181832915">
+<div created="20210309181832920" modified="20210309183921340" parent="March 9th, 2021 (Tuesday)" stream-list="" stream-type="default" time-pinned="20210309183613" title="March 9th, 2021 (Tuesday)/20210309181832915">
+<pre>[[#LiteratureNotes]] [[A City is Not a Tree]]</pre>
+</div>
+<div created="20210309181926756" modified="20210309183601674" parent="March 9th, 2021 (Tuesday)" stream-type="default" title="March 9th, 2021 (Tuesday)/20210309181926753">
+<pre>[[#FleetingNotes]] [[Christopher Alexander]]'s work led to the first [[wiki]], created by [[Ward Cunningham]]</pre>
+</div>
+<div created="20210309183710964" modified="20210309183710964" parent="March 9th, 2021 (Tuesday)" stream-type="default" title="March 9th, 2021 (Tuesday)/20210309183710961">
+<pre></pre>
+</div>
+<div created="20210309183723550" modified="20210309183847388" parent="March 9th, 2021 (Tuesday)" stream-list="" stream-type="default" title="March 9th, 2021 (Tuesday)/20210309183723547">
 <pre>[[#FleetingNotes]] [[Christopher Alexander]] wrote an essay in 1965 [[A City is Not a Tree]]</pre>
 </div>
-<div created="20210309181926756" modified="20210309181926756" parent="March 9th, 2021 (Tuesday)" stream-type="default" title="March 9th, 2021 (Tuesday)/20210309181926753">
+<div created="20210309183922623" modified="20210309183922623" parent="March 9th, 2021 (Tuesday)" stream-type="default" title="March 9th, 2021 (Tuesday)/20210309183922621">
 <pre></pre>
 </div>
 <div created="20201026122348804" modified="20201026122348804" title="Martin Luther King Jr">
@@ -19058,6 +19114,9 @@ The T statistic doesn’t really tell you much on its own. It’s like the word 
 <div created="20210308233958609" modified="20210308233958609" title="trisaster">
 <pre></pre>
 </div>
+<div created="20210309183323405" modified="20210309183323405" title="University of California, Berkeley">
+<pre></pre>
+</div>
 <div created="20201106164808348" modified="20201106165651181" stream-list="[[User Manual/20201106165600133]] [[User Manual/20201106165649802]] [[User Manual/20201106165649803]] [[User Manual/20201106165649804]] [[User Manual/20201106165649805]] [[User Manual/20201106165649806]] [[User Manual/20201106165649807]] [[User Manual/20201106165649808]] [[User Manual/20201106165649809]] [[User Manual/20201106165649810]] [[User Manual/20201106165649811]] [[User Manual/20201106165649812]] [[User Manual/20201106165649813]] [[User Manual/20201106165649814]] [[User Manual/20201106165649815]] [[User Manual/20201106165649816]] [[User Manual/20201106165649818]] [[User Manual/20201106165649819]] [[User Manual/20201106165649820]] [[User Manual/20201106165649821]] [[User Manual/20201106165649822]]" stream-type="default" tags="" title="User Manual">
 <pre></pre>
 </div>
@@ -19155,6 +19214,9 @@ Right click on a bullet to access context menu
 <pre></pre>
 </div>
 <div created="20210309023441569" modified="20210309023441569" title="vulnerability">
+<pre></pre>
+</div>
+<div created="20210309183544217" modified="20210309183544217" title="Ward Cunningham">
 <pre></pre>
 </div>
 <div created="20210308230348215" modified="20210309181806132" sort-date="20210308" stream-list="[[Welcome to my online space/20210308233258239]] [[Welcome to my online space/20210308232719709]] [[Welcome to my online space/20210308232907501]] [[Welcome to my online space/20210308233316572]]" stream-type="default" tags="Introduction welcome" title="Welcome to my online space">
@@ -19303,6 +19365,9 @@ Right click on a bullet to access context menu
 <pre>Additionally the task will appear in the footer of any other page (on your wiki) you link to.</pre>
 </div>
 <div created="20210213150501856" modified="20210213150501856" title="what">
+<pre></pre>
+</div>
+<div created="20210309183544215" modified="20210309183544215" title="wiki">
 <pre></pre>
 </div>
 <div created="20210304232601609" modified="20210304232601609" title="working memory">
